Updated delivery module

--- a/src/app/pages/trucking/air/air.component.html
+++ b/src/app/pages/trucking/air/air.component.html
@@ -1,11 +1,413 @@
-<h1>Air Trucking</h1>
+<h1 style="font-weight: bolder; background-color: rgb(0, 195, 255); text-align: center;">Air Trucking</h1>
 
-<mat-card>This Month</mat-card>
-<mat-card>Up to Today's Date</mat-card>
-<mat-card>Last Year Same Month</mat-card>
-<mat-card>Last Year</mat-card>
-<mat-card>Today Delivery</mat-card>
-<mat-card>Future Deliveries</mat-card>
+<div class="container">
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+    <select for="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+  
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br>
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select><br> <br>
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br><br>
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+    </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+  <div>
+    <label for="coName">Company:</label><br>
+    <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <label for="delDate">Delivery Date:</label><br>
+    <input type="date" id="delDate" name="delDate" value=""><br>
+    <label for="delTime">AM or PM ?</label>
+
+    <select name="delTime" id="delTime">
+      <option value="am">AM</option>
+      <option value="pm">PM</option>
+    </select> <br> <br> 
+  </div>
+  
+</div>
 
 <mat-grid-list cols="12" rowHeight="100px">
   <mat-grid-tile
