--- a/src/app/pages/trucking/lcl/lcl.component.html
+++ b/src/app/pages/trucking/lcl/lcl.component.html
@@ -1,1 +1,409 @@
-<p>lcl works!</p>
+<h1 style="font-weight: bolder; background-color: rgb(156, 156, 148); text-align: center;">LCL Delivery Schedule</h1>
+
+<div class="container">
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+      <select for="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br>
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select><br> <br>
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br><br>
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+  
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+      </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+    <div>
+      <label for="coName">Company:</label><br>
+      <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+      <label for="delDate">Delivery Date:</label><br>
+      <input type="date" id="delDate" name="delDate" value=""><br>
+      <label for="delTime">AM or PM ?</label>
+  
+      <select name="delTime" id="delTime">
+        <option value="am">AM</option>
+        <option value="pm">PM</option>
+      </select> <br> <br> 
+    </div>
+    
+  </div>
