updated login and track-trace components

--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -76,8 +76,8 @@
             <li>Delivery Status</li>
           </ul>
           <mat-card-actions>
-            <button mat-button class="btn btn-secondary" style="margin-left:120px"> Log In or Sign Up </button>
-          </mat-card-actions>
+            <a routerLink='/account/register'><button mat-button class="btn btn-secondary" style="margin-left:120px"> Log In or Sign Up </button> </a>       
+             </mat-card-actions>
         </mat-card-content >
 
       </mat-card>
@@ -97,7 +97,7 @@
               <li>Print entry documents</li>
             </ul>
             <mat-card-actions>
-              <button mat-button class="btn btn-warning" style="margin-left:120px"> Log In or Sign Up </button>
+              <a routerLink='/account/register'><button mat-button class="btn btn-warning" style="margin-left:120px"> Log In or Sign Up </button> </a>
             </mat-card-actions>
       </mat-card-content >
     </mat-card>
@@ -117,7 +117,7 @@
           <li>Contact the issuer</li>
         </ul>
         <mat-card-actions>
-          <button mat-button class="btn btn-info" style="margin-left:120px"> Log In or Sign Up </button>
+          <a routerLink='/account/register'><button mat-button class="btn btn-info" style="margin-left:120px"> Log In or Sign Up </button> </a>
         </mat-card-actions>
       </mat-card-content >
     </mat-card>
@@ -142,7 +142,7 @@
           <li>Generate invoices</li>
         </ul>
         <mat-card-actions>
-          <button mat-button class="btn btn-success" style="margin-left:120px"> Log In or Sign Up </button>
+          <a routerLink='/account/register'><button mat-button class="btn btn-primary" style="margin-left:120px"> Log In or Sign Up </button> </a>
         </mat-card-actions>
       </mat-card-content >
     </mat-card>
@@ -162,7 +162,7 @@
             <li>Shipment tracking</li>
           </ul>
           <mat-card-actions>
-            <button mat-button class="btn btn-danger" style="margin-left:120px"> Log In or Sign Up </button>
+            <a routerLink='/account/register'><button mat-button class="btn btn-danger" style="margin-left:120px"> Log In or Sign Up </button> </a>
           </mat-card-actions>
     </mat-card-content >
   </mat-card>
@@ -183,7 +183,7 @@
         <li>Receive payments</li>
       </ul>
       <mat-card-actions>
-        <button mat-button class="btn btn-warning" style="margin-left:120px"> Log In or Sign Up </button>
+        <a routerLink='/account/register'><button mat-button class="btn btn-warning" style="margin-left:120px"> Log In or Sign Up </button> </a>
       </mat-card-actions>
     </mat-card-content >
   </mat-card>
@@ -203,7 +203,7 @@
           <li>Reports</li>
         </ul>
         <mat-card-actions>
-          <button mat-button class="btn btn-info" style="margin-left:120px"> Log In or Sign Up </button>
+          <a routerLink='/account/register'><button mat-button class="btn btn-info" style="margin-left:120px"> Log In or Sign Up </button> </a>
         </mat-card-actions>
   </mat-card-content >
 
