--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,3 +1,58 @@
+<div class="container">
+
+<div class="login-wrapper"  fxLayoutAlign="center center">
+  <mat-card class="example-card" >
+    <mat-card-header>
+      <mat-card-title>Log in</mat-card-title>
+    </mat-card-header>
+    <form class="example-form">
+      <mat-card-content>
+        <mat-form-field appearance="fill">
+          <input matInput placeholder="Username">
+        </mat-form-field>
+        <mat-form-field appearance ="fill">
+          <input matInput placeholder="Password">
+        </mat-form-field>
+      </mat-card-content>
+      <button mat-stroked-button color="accent" class="btn-block">Log in</button>
+    </form>
+  </mat-card>
+</div>
+<mat-divider></mat-divider>
+
+<div class="login-wrapper" fxLayoutAlign="center center">
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Register</mat-card-title>
+    </mat-card-header>
+    <form class="example-form">
+      <mat-card-content>
+        <mat-form-field appearance="fill">
+          <input matInput placeholder="Username">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <input matInput placeholder="Email">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <input matInput placeholder="Password">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Choose a role...</mat-label>
+          <mat-select>
+            <mat-option [value]="roles" *ngFor="let roles of Roles">{{roles}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <button mat-stroked-button color="accent" class="btn-block">Register</button>
+    </form>
+  </mat-card>
+</div>
+
+</div>
+
+
+<!-- 
 <div class="container col-md-3">
   <div class="card" style="margin-top: 200px;">
     <img
@@ -85,3 +140,4 @@
     </div>
   </div>
 </div>
+ -->
