--- a/src/app/pages/track-and-trace/track-and-trace.component.html
+++ b/src/app/pages/track-and-trace/track-and-trace.component.html
@@ -1,36 +1,64 @@
 
 <h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Track And Trace</h1>
-<div class="bold">
 
-</div>
+<mat-chip-list aria-label="Track and Trace" >
+  <mat-chip routerLink="airImport">
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    Air Import
+  </mat-chip>
+  <mat-chip color="primary">
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    Air Export
+  </mat-chip>
+  <mat-chip color="accent">
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    Ocean Import
+  </mat-chip>
 
-<mat-card>
-    <mat-card-header>
-      List of Entries
-    </mat-card-header>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      Entries Under Exam
-    </mat-card-header>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      Entries with PGA Hold
-    </mat-card-header>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      Entries Past Arrival Dates
-    </mat-card-header>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      Duty Payments Due
-    </mat-card-header>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      Liquidated Entries
-    </mat-card-header>
-  </mat-card>  
+  <mat-chip>
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    Ocean Export
+  </mat-chip>
+  <mat-chip color="primary">
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    Deliveries
+  </mat-chip>
+  <mat-chip color="accent">
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    Customs Entries
+  </mat-chip>
+
+  <mat-chip>
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    By B/L No
+  </mat-chip>
+  <mat-chip color="primary">
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    By Entry No
+  </mat-chip>
+  <mat-chip color="accent">
+    <mat-chip-avatar>
+        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    </mat-chip-avatar>
+    By Container No
+  </mat-chip>
+
+</mat-chip-list>
+
+<router-outlet></router-outlet>
